# nucleus-dashboard-api

./: .gitignore  Cargo.toml  README.md
artifacts/: polkadot_metadata_full.scale
src/: config.rs  main.rs  rpc_client.rs  subxt_client.rs
